GNOME Bugzilla – Bug 681617
radio button text isn't centered when draw indicator is FALSE
Last modified: 2012-08-23 16:39:35 UTC
Created attachment 220899 [details] screenshot When I have radio buttons in a homogeneous box and gtk_toggle_button_set_mode is FALSE the label text isn't centered.
Created attachment 220900 [details] [review] Don't left align label in check buttons when they have no indicator Because they should be normal buttons in that case.
Review of attachment 220900 [details] [review]: In general I do not like very much when widgets connect to their own signals or property notifications. Can't we instead just set the right default alignment in constructed() after the draw_indicator property has been set?
But that doesn't help if someone calls set_mode() later, right?
Created attachment 221158 [details] [review] Don't left align label in check buttons when they have no indicator Because they should be normal buttons in that case. Small optimization
See blocking bug for use case. Specifically: button1 = gtk_radio_button_new_with_label (NULL, _("Wallpapers")); gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (button1), TRUE); context = gtk_widget_get_style_context (button1); gtk_style_context_add_class (context, "raised"); gtk_toggle_button_set_mode (GTK_TOGGLE_BUTTON (button1), FALSE);
Attachment 221158 [details] pushed as 515e211 - Don't left align label in check buttons when they have no indicator
*** Bug 682557 has been marked as a duplicate of this bug. ***