Don't left align label in check buttons when they have no indicator

Because they should be normal buttons in that case.

https://bugzilla.gnome.org/show_bug.cgi?id=681617